Fix image clipping in media

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -50,3 +50,4 @@ footer .logo{height:120px;opacity:0.9;}
 .insta-shadow{top:1em;width:100%;height:2em;background:-webkit-linear-gradient(transparent, white);background:-o-linear-gradient(transparent, white);background:-moz-linear-gradient(transparent, white);background:linear-gradient(transparent, white);}
 @media only screen and (min-width:993px){#i404{margin-top:7rem;}}
 .responsive-img{object-fit:cover;min-width:100%;min-height:100%;}
+.h100{height:100%;}
